--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         tag:
-          - '3.8'
+          - '3.8-lua'
     steps:
       - uses: actions/checkout@v2
       # Setup QEMU for ARM64 Build
