--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -12,6 +12,9 @@ jobs:
   push:
     name: "yolks:python_${{ matrix.tag }}"
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     strategy:
       fail-fast: false
       matrix:
@@ -28,13 +31,17 @@ jobs:
       - uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract Docker Data
+        id: meta
+        uses: docker/metadata-action@v4.0.1
+        with:
+          images: ghcr.io/${{ github.repository }}
       - uses: docker/build-push-action@v2
         with:
           context: ./python
           file: ./python/${{ matrix.tag }}/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/yolks:python_${{ matrix.tag }}
+          tags: ${{ steps.meta.outputs.tags }}
